# agent-mem-lab

./: .env.example  .gitignore  AGENTS.md  PROJECT_INIT.md  PROJECT_RULES.md  PROJECT_STATUS.md  README.md  agent_memory_project_plan.md  pyproject.toml
agent_lab/: __init__.py  agent_runner.py  model_factory.py  offline_model.py  prompts.py  smol_tools.py  trace.py
agent_lab/memory/: __init__.py  base.py  mem0_backend.py  no_memory.py  raw_history.py
agent_lab/tools/: __init__.py  calculator.py  files.py  shell.py  vision.py
configs/: agent.yaml  eval.yaml  memory.yaml  model.local.yaml.example
eval/: metrics.py  runner.py
eval/adapters/: locomo.py  longmemeval.py
scripts/: run_agent_once.py
tests/: test_agent_runner.py  test_memory_backends.py  test_model_factory.py  test_smolagents_smoke.py
