[project]
name = "agent-memory-lab"
version = "0.1.0"
description = "A local agent memory research lab built around smolagents and Mem0."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
agent = [
  "smolagents>=1.0",
  "mem0ai>=0.1",
]
vision = [
  "pillow>=10.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
